src/components/atomic/Autocomplete/Autocomplete.scss
.cts-autocomplete {
  position: relative;

  &__menu {
    position: absolute;
    background: white;
    border: 1px solid #ccc;
    top: 65px;
    width: 100%;
    z-index: 10;
    overflow: auto;
    max-height: 280px;

    // menus with hidden labels
    &.--leadOrg,
    &.--hospitals,
    &.--trialInvestigators {
      top: 39px;
    }

    &-item {
      line-height: 1.4;
      padding: .5em 0.5em;

      &.highlighted {
        background: #286ea7;
        font-weight: bold;
        color: white;
      }
    }
  }
  + .cts-autocomplete {
    margin-top: 1em;
  }
}

.cts-chip-list {
  background: white;
  border: 1px solid #bdbdc2;
  padding: 0 2px;
  box-shadow: inset 0 2px 4px 0 hsla(240, 4%, 95%, 0.05);

  &.cts-chip-list--modified {
    background: rgba(254, 230, 133, .4);
    .cts-input {
      background: none;
    }
  }
  
  .cts-input {
    border: 0;
    display: inline-block;
    width: 270px;
    margin-bottom: 0;
  }
}

.cts-input__help-text:not(:last-child){
  margin-bottom: 1em;
}

